[metadata]
name = clip_values
version = 0.1.0.4
author = Rodrigo Girão Serrão
author_email = rodrigo@mathspp.com
description = Clipping values in a human-readable way.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RojerGS/clip_values
project_urls =
    Bug Tracker = https://github.com/RojerGS/clip_values/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3

[options.packages.find]
where = src